# webfs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  doxygen.conf
CMake/: DownloadGoogleMock.cmake  DownloadGoogleTest.cmake  DownloadJsonCpp.cmake  DownloadRapidJSON.cmake  FindCURL.cmake  FindFUSE.cmake
fuse/: CMakeLists.txt  main.cpp
include/: base64.h  file.h  filesystem.h  fuse_main.h  node.h  node_serializer.h  tree.h  utils.h
include/gists/: gistsRequest.h
include/storage/: CurlUtil.h  CurlUtil.h~  GistUtil.h  gist.h  storage.h
include/storage/adapter/: adapter.h  gist.h  result.h
src/: CMakeLists.txt  base64.c  filesystem.cpp  fuse.c  fuse.cpp  main.c  main.cpp  node.cpp  node_serializer.cpp  tree.c  utils.cpp
src/gists/: gistsRequest.cpp
src/storage/: GistUtil.cpp  gist.c  gist.cpp
src/storage/adapter/: gist.cpp
test/: CMakeLists.txt  filesystem_test.cpp  github_adapter_test.cpp  node_serialize_test.cpp  node_test.cpp  node_write_test.cpp
test/curlMock/: curlMock.cpp  curlMock.h
test/storage/adapter/: gist_adapter_test.cpp
test/storage/gist/: GistTestUtil.h  GistUtilTest.cpp  deleteGistTest.cpp  gistGeneric.cpp  gistGenericTest.cpp  readGistTest.cpp  updateGistTest.cpp  writeGistTest.cpp
